# wave-function-collapse

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
scripts/: run_project_format.ps1
src/: main.py
src/wave_function_collapse/: pixel_canvas.py
src/wave_function_collapse/types/: __init__.py  label_description.py  propagation_instruction.py  raw_label_description.py
src/wave_function_collapse/utils/: __init__.py  rgb_array_to_string.py  set_intersection.py  string_to_rgb_array.py  transform_labels_to_avg_rgb_value.py
tests/utils/: test_intersect_sets.py
